# generation-jde

./: .gitignore  LICENSE  MANIFEST.in  README.md  README.rst  dev.sh  issues.md  pyproject.toml  setup.cfg  setup.py
docs/: documentation.md
docs/tutorials/: creation.md  project-file.md
generation.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
libgeneration/: funzioniUtili.py  pyproject.toml
libgeneration/files/: utils.py
src/: pyproject.toml
src/eneration_class_project.egg-info/: PKG-INFO  SOURCES.txt
src/generation-project/: pyproject.toml
src/generation_class_project/: pyproject.toml
src/generation_class_project.egg-info/: SOURCES.txt  top_level.txt
src/generation_class_project/generation_class_project.egg-info/: PKG-INFO  SOURCES.txt
src/generationproject/: arithmetic.py  chatgpt.py  generation.py  helloeveryone.py  newmodule.py  pyproject.toml
src/generationproject/generationproject.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
