[build-system]
requires = [
    "setuptools"
]
build-backend = "setuptools.build_meta"

[project]
name = "generation"
description = "Materials part of generation's JDE course"
authors = [{ name="Jules"},]
dynamic = ["version", "readme", "dependencies", "optional-dependencies"]
license = {text = "MIT"}
classifiers = [
  "Intended Audience :: Education",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Operating System :: OS Independent",
]
[project.urls]
"Documentaton" = "https://github.com/Netherfield/generation-jde/docs"
"Code" = "https://github.com/Netherfield/generation-jde"
"Issue tracker" = "https://github.com/Netherfield/generation-jde/issues"

[tool.setuptools.packages.find]
include = ["libgeneration*"]


[tool.setuptools.dynamic]
readme = {file = "README.md"}