[options]
packages = find_namespace:
python_requires >= 3.10
setup_requires =
    setuptools
# install_requires =
#     my_dep >= ver.ver
# tests_require =
#     test_utilities >= ver.ver

# [options.package_data]
# libgeneration.resources =
#     my_data.bmp

[options.extras_require]
ipython =
    ipykernel
    jupyter_console

[options.packages.find]
exclude =
    test*