[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "generationproject"
version = "0.0.1"
authors = [
  { name="Netherfield"},
]
description = "Materials part of the JDE course"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.setuptools]
py-modules = ["__init__", "funzioniUtili", "generation"]

[project.urls]
Documentaton = "https://github.com/Netherfield/generation-jde/docs"